--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
 	<canvas id="chessboard" width="512" height="512"></canvas>
+	<input id="moveInput" type="text">
+	<button id="sendButton">Send</button>
+	<br>
+	<label id="messageLabel"></label>
 </body>
 <script src="./script.js"></script>
 </html>
