feat: add move history

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<div class="workspace">
 		<canvas id="chessboard" width="512" height="512"></canvas>
 		<div class="side-pane">
+			<div id="history" class="history"></div>
 			<button id="sendButton">Send</button>
 			<input id="moveInput" type="text" placeholder="Enter your move here">
 		</div>
