--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
 </head>
 <body>
 	<div class="workspace">
-		<canvas id="chessboard" width="512" height="512"></canvas>
-		<div class="side-pane">
-			<div id="history" class="history"></div>
-			<button id="sendButton">Send</button>
-			<input id="moveInput" type="text" placeholder="Enter your move here">
+		<div class="depth-section">
+			<h1>Search Depth:</h1>
+			<input type="text" id="search-depth" value="5">
+		</div>
+		<div class="playing-board">
+			<canvas id="chessboard" width="512" height="512"></canvas>
+			<div class="side-pane">
+				<div id="history" class="history"></div>
+				<button id="sendButton">Send</button>
+				<input id="moveInput" type="text" placeholder="Enter your move here">
+			</div>
 		</div>
 	</div>
 	
