feat: add 4 buttons

--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
 			<canvas id="chessboard" width="512" height="512"></canvas>
 			<div class="side-pane">
 				<div id="history" class="history"></div>
-				<button id="sendButton">Send</button>
+				<div class="buttons">
+					<button id="back-button">Back</button>
+					<button id="restart-button">Best</button>
+					<button id="best-button">Black</button>
+					<button id="black-button">Restart</button>
+				</div>
 				<input id="moveInput" type="text" placeholder="Enter your move here">
 			</div>
 		</div>
