--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 				<div id="history" class="history"></div>
 				<div class="buttons">
 					<button id="back-button">Back</button>
-					<button id="restart-button">Best</button>
-					<button id="best-button">Black</button>
-					<button id="black-button">Restart</button>
+					<button id="best-button">Best</button>
+					<button id="black-button">Black</button>
+					<button id="restart-button">Restart</button>
 				</div>
 				<input id="moveInput" type="text" placeholder="Enter your move here">
 			</div>
