feat: add flip button & fix takeback bug

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<div class="buttons">
 					<button id="back-button">Back</button>
 					<button id="best-button">Best</button>
-					<button id="black-button">Black</button>
+					<button id="flip-button">Flip</button>
 					<button id="restart-button">Restart</button>
 				</div>
 				<input id="moveInput" type="text" placeholder="Enter your move here">
