feat: add landing page

--- a/index.html
+++ b/index.html
@@ -9,24 +9,11 @@
 </head>
 <body>
 	<nav>
-		<a href="/index.html">Openings</a>
-		<a href="/puzzles.html">Puzzles</a>
-		<a href="/endgames.html">Endgames</a>
+		<a href="/openings/">Openings</a>
+		<a href="/puzzles/">Puzzles</a>
+		<a href="/endgames/">Endgames</a>
 	</nav>
-	<div class="workspace">
-		<div class="playing-board">
-			<canvas id="chessboard" width="512" height="512"></canvas>
-			<div class="side-pane">
-				<div id="history" class="history"></div>
-				<div class="buttons">
-					<button id="best-button">Best</button>
-					<button id="restart-button">Restart</button>
-				</div>
-				<input id="moveInput" type="text" placeholder="Enter your move here">
-			</div>
-		</div>
-	</div>
-	
+	<h1>WebChess</h1>
+	<p>Welcome to this free online chess service where you can practice your chess skills no matter what level you are at. If you are seeing this message, that means the website is still under heavy development and many features probably aren't working yet and/or many bugs remain to be fixed.</p>
 </body>
-<script src="./openings.bundle.js"></script>
 </html>
