--- a/openings/index.html
+++ b/openings/index.html
@@ -19,8 +19,7 @@
 			<div class="side-pane">
 				<div id="history" class="history"></div>
 				<div class="buttons">
-					<button id="best-button">Best</button>
-					<button id="restart-button">Restart</button>
+					<button id="skip-button">Skip</button>
 				</div>
 				<input id="moveInput" type="text" placeholder="Enter your move here">
 			</div>
@@ -28,5 +27,5 @@
 	</div>
 	
 </body>
-<script src="./endgames.bundle.js"></script>
+<script src="./script.js"></script>
 </html>
