feat: style openings tab

--- a/openings/index.html
+++ b/openings/index.html
@@ -17,7 +17,10 @@
 		<div class="playing-board">
 			<canvas id="chessboard" width="512" height="512"></canvas>
 			<div class="side-pane">
-				<div id="history" class="history"></div>
+				<div id="details" class="details">
+					<h1>Black to move</h1>
+					<p>Score: 0</p>
+				</div>
 				<div class="buttons">
 					<button id="skip-button">Skip</button>
 				</div>
