feat: openings selection

--- a/openings/index.html
+++ b/openings/index.html
@@ -20,6 +20,12 @@
 				<div id="details" class="details">
 					<h1>Black to move</h1>
 					<p>Score: 0</p>
+					<select>
+						<option value="kingsindian">Black: Kings Indian</option>
+						<option value="frenchdefense">Black: French Defense</option>
+						<option value="maxlange">White: Max Lange Attack</option>
+						<option value="queensgambit">White: Queens Gambit</option>
+					</select>
 				</div>
 				<div class="buttons">
 					<button id="skip-button">Skip</button>
