feat: load and display openings

--- a/openings/index.html
+++ b/openings/index.html
@@ -20,11 +20,12 @@
 				<div id="details" class="details">
 					<h1>Black to move</h1>
 					<p>Score: 0</p>
-					<select>
+					<select id="selection-menu">
+						<option value="ponziani">White: Ponziani</option>
+						<option value="queensgambit">White: Queens Gambit</option>
+						<option value="maxlange">White: Max Lange Attack</option>
 						<option value="kingsindian">Black: Kings Indian</option>
 						<option value="frenchdefense">Black: French Defense</option>
-						<option value="maxlange">White: Max Lange Attack</option>
-						<option value="queensgambit">White: Queens Gambit</option>
 					</select>
 				</div>
 				<div class="buttons">
