--- a/openings/index.html
+++ b/openings/index.html
@@ -19,7 +19,7 @@
 			<div class="side-pane">
 				<div id="details" class="details">
 					<h1>Black to move</h1>
-					<p>Score: 0</p>
+					<p id="score">Score: 0</p>
 					<select id="selection-menu">
 						<option value="ponziani">White: Ponziani</option>
 						<option value="queensgambit">White: Queens Gambit</option>
