--- a/openings/index.html
+++ b/openings/index.html
@@ -18,7 +18,7 @@
 			<canvas id="chessboard" width="512" height="512"></canvas>
 			<div class="side-pane">
 				<div id="details" class="details">
-					<h1>Black to move</h1>
+					<h1 id="turn">White to move</h1>
 					<p id="score">Score: 0</p>
 					<select id="selection-menu">
 						<option value="ponziani">White: Ponziani</option>
