fix: update hrefs

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
 	<nav>
-		<a href="/openings/">Openings</a>
-		<a href="/puzzles/">Puzzles</a>
-		<a href="/endgames/">Endgames</a>
+		<a href="/openings">Openings</a>
+		<a href="/puzzles">Puzzles</a>
+		<a href="/endgames">Endgames</a>
 	</nav>
 	<h1>WebChess</h1>
 	<p>Welcome to this free online chess service where you can practice your chess skills no matter what level you are at. If you are seeing this message, that means the website is still under heavy development and many features probably aren't working yet and/or many bugs remain to be fixed.</p>
